# fan-controller

./: .gdbinit  Cargo.toml  flash.sh  memory.x  openocd.cfg
src/: main.rs  peripherals.rs  pwm.rs
